fixed navbar spacing issue

--- a/src/css/Hourly.css
+++ b/src/css/Hourly.css
@@ -39,6 +39,7 @@
     font-size: 1.2rem;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .expand-hourly-container div {
