--- a/src/css/Seven-Day.css
+++ b/src/css/Seven-Day.css
@@ -30,6 +30,7 @@
     font-size: 1.2rem;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .expand-daily-container div {
